# xp-connx

./: .gitignore  Cargo.toml  ext_dependencies.csv  justfile  template.env
data/db_gen/: Dockerfile  database_students.sql  docker-compose.yaml
data/sql_queries/: students_10.sql  students_id_and_name.sql  students_w_id.sql
src/: args.rs  connectorx_df.rs  consts.rs  lib.rs  main.rs  sqlx_trans.rs  vecstruct_df.rs
