[package]
name = "xp-connx"
version = "0.1.0"
edition = "2021"
[lints.rust]
#unsafe_code = "forbid"
unused = "allow" # WARN: for exploratory dev

[dependencies]
chrono = { version = "0.4", features = ["serde", "arbitrary"] }
clap = { version = "4", features = [
    "env",
    "derive",
    "unicode",
    "string",
    "wrap_help",
] }
connectorx = { version = "0.3", features = ["src_mysql", "dst_arrow2"] }
derive_more = "0.99.17"
dialoguer = { version = "0.11", features = [
    "fuzzy-matcher",
    "fuzzy-select",
    "history",
    "completion",
] }
dotenvy = "0.15"
futures = "0.3"
itertools = "0.13"
polars = { version = "0.40", features = [
    "lazy",
    "serde",
    "json",
    "docs-selection",
    "temporal",
] }
secrecy = "0.8.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "mysql",
    "macros",
    "chrono",
] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-stream = { version = "0.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "serde",
    "json",
    "chrono",
    "tracing-serde",
] }
tracing-timing = "0.6"
